--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>action</title>
     <link rel="stylesheet" href="/font-awesome/css/all.css">
+    <link rel="icon" type="image/png" href="https://cdns.klimg.com/merdeka.com/media/i/a/favicon.png">
     <style>
         * {
             margin: 0;
